add pagination and service